Nicolas_Tafur/log/build_2025-09-05_07-07-27/robot/stderr.log
  File "/home/felipe/robótica/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/python3.10/site-packages/robot/pinterfaz.py", line 563
    if self.mode_select = 1:
       ^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?

